# Project-Euler

./: Design.md  README.md  setup.cfg
Problem2-13/: 13_largeSum.py
Problem4_11/: largest_palindrome.py  largest_product_in_a_grid.py
Problem5_10/: smallest_multiple5.py  summation_of_primes.py
Problems1_14/: LongestCollatzSeq.py
Problems20-30/: 1001stprime.py  digitfifthpowers.py  factorialdigitsum.py  sumssquarediff.py
Problems3_12/: HighlyDivisibleTriangularNumber.py  LargestPrimeFactor.py
src/EulerSolver/: __init__.py
src/ProblemSolver/: __init__.py  _problems.py
src/ProblemSolverTools/: LargeSum.py  LongestCollatzSeq.py  MultiplesOf3and5.py
test/TestProblemSolver/: test_problem1.py
test/TestProblemSolverTools/: test_LargestPalindrome.py  test_LargestProductInAGrid.py  test_LongestCollatzSeq.py  test_MultiplesOf3and5.py
