[metadata]

name = pygraph_mUsICm345_v2_2
version = 0.0.1
author = Music ML Team
author_email = vaibhavilokegaonkar@gmail.com
description = This package implements basic graph and shortest path algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahimonga/Project-Euler
project_urls =
    Bug Tracker = https://github.com/mahimonga/Project-Euler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src